# mutter-rs

./: .gitmodules  Cargo.toml  README.md  atk-sys.toml  clutter-sys.patch  clutter-sys.toml  cogl-sys.toml  gdesktop_enums-sys.patch  gdesktop_enums-sys.toml  generate.sh  json-sys.toml  meta-sys.patch  meta-sys.toml  xlib-sys.toml
atk-sys/: Cargo.toml  build.rs
atk-sys/src/: lib.rs
atk-sys/tests/: abi.rs  constant.c  layout.c
clutter/: Cargo.toml  Gir.toml  comments.md
clutter-sys/: Cargo.toml  Cargo.toml.orig
clutter-sys/src/: lib.rs
clutter-sys/tests/: abi.rs  constant.c  layout.c  manual.h
clutter/src/: color.rs  key_event.rs  lib.rs
clutter/src/auto/: action.rs  actor.rs  actor_meta.rs  align_constraint.rs  animatable.rs  backend.rs  canvas.rs  clone.rs  color.rs  constraint.rs  container.rs  content.rs  effect.rs  enums.rs  flags.rs  functions.rs  image.rs  input_device.rs  input_focus.rs  input_method.rs  mod.rs  scriptable.rs  stage.rs  text.rs  text_buffer.rs
cogl/: Cargo.toml  Gir.toml  comments.md
cogl-sys/: Cargo.toml
cogl-sys/src/: lib.rs
cogl-sys/tests/: abi.rs  constant.c  layout.c  manual.h
cogl/src/: lib.rs
cogl/src/auto/: flags.rs  functions.rs  mod.rs  texture.rs
gdesktop_enums/: Cargo.toml  Gir.toml
gdesktop_enums-sys/: Cargo.toml
gdesktop_enums-sys/src/: lib.rs
gdesktop_enums-sys/tests/: abi.rs  constant.c  layout.c
gdesktop_enums/src/auto/: enums.rs  mod.rs
json-sys/: Cargo.toml
json-sys/src/: lib.rs
json-sys/tests/: abi.rs  constant.c  layout.c  manual.h
meta/: Cargo.toml  Gir.toml  comments.md
meta-sys/: Cargo.toml
meta-sys/src/: lib.rs
meta-sys/tests/: abi.rs  constant.c  layout.c
meta/src/: display.rs  lib.rs  rectangle.rs
meta/src/auto/: backend.rs  background.rs  background_actor.rs  background_content.rs  background_group.rs  compositor.rs  display.rs  enums.rs  flags.rs  functions.rs  key_binding.rs  mod.rs  monitor_manager.rs  plugin.rs  rectangle.rs  selection.rs  selection_source.rs  stage.rs  window.rs  window_actor.rs  window_group.rs  workspace.rs  workspace_manager.rs
meta/src/subclass/: mod.rs  plugin.rs
mutter-gir-files/: Clutter-8.gir  Clutter-8.patch  Cogl-8.gir  Cogl-8.patch  CoglPango-8.gir  GDesktopEnums-3.0.gir  GDesktopEnums-3.0.patch  Json-1.0.gir  Meta-8.gir  Meta-8.patch  xlib-2.0.gir  xlib-2.0.patch
xlib-sys/: Cargo.toml
xlib-sys/src/: lib.rs
xlib-sys/tests/: abi.rs  constant.c  layout.c
