[package]
name = "atk-sys"
version = "0.0.1"
links = "\"atk-1.0\""
edition = "2018"
build = "build.rs"
[package.metadata.system-deps.atk]
name = "atk"
version = "0.0"

[package.metadata.system-deps.atk.v1_3]
version = "1.3"

[package.metadata.system-deps.atk.v1_4]
version = "1.4"

[package.metadata.system-deps.atk.v1_6]
version = "1.6"

[package.metadata.system-deps.atk.v1_8]
version = "1.8"

[package.metadata.system-deps.atk.v1_9]
version = "1.9"

[package.metadata.system-deps.atk.v1_12]
version = "1.12"

[package.metadata.system-deps.atk.v1_13]
version = "1.13"

[package.metadata.system-deps.atk.v1_20]
version = "1.20"

[package.metadata.system-deps.atk.v1_30]
version = "1.30"

[package.metadata.system-deps.atk.v2_2]
version = "2.2"

[package.metadata.system-deps.atk.v2_7_4]
version = "2.7.4"

[package.metadata.system-deps.atk.v2_7_90]
version = "2.7.90"

[package.metadata.system-deps.atk.v2_8]
version = "2.8"

[package.metadata.system-deps.atk.v2_9_3]
version = "2.9.3"

[package.metadata.system-deps.atk.v2_9_4]
version = "2.9.4"

[package.metadata.system-deps.atk.v2_10]
version = "2.10"

[package.metadata.system-deps.atk.v2_12]
version = "2.12"

[package.metadata.system-deps.atk.v2_14]
version = "2.14"

[package.metadata.system-deps.atk.v2_30]
version = "2.30"

[package.metadata.system-deps.atk.v2_32]
version = "2.32"

[package.metadata.system-deps.atk.v2_34]
version = "2.34"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "atk_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v1_3 = []
v1_4 = ["v1_3"]
v1_6 = ["v1_4"]
v1_8 = ["v1_6"]
v1_9 = ["v1_8"]
v1_12 = ["v1_9"]
v1_13 = ["v1_12"]
v1_20 = ["v1_13"]
v1_30 = ["v1_20"]
v2_2 = ["v1_30"]
v2_7_4 = ["v2_2"]
v2_7_90 = ["v2_7_4"]
v2_8 = ["v2_7_90"]
v2_9_3 = ["v2_8"]
v2_9_4 = ["v2_9_3"]
v2_10 = ["v2_9_4"]
v2_12 = ["v2_10"]
v2_14 = ["v2_12"]
v2_30 = ["v2_14"]
v2_32 = ["v2_30"]
v2_34 = ["v2_32"]
dox = []
