[package]
name = "clutter-sys"
version = "0.0.1"
links = "\"mutter-clutter-8\""
edition = "2018"
build = "build.rs"
[package.metadata.system-deps.mutter_clutter_8]
name = "mutter-clutter-8"
version = "0.0"

[package.metadata.system-deps.mutter_clutter_8.v0_2]
version = "0.2"

[package.metadata.system-deps.mutter_clutter_8.v0_4]
version = "0.4"

[package.metadata.system-deps.mutter_clutter_8.v0_6]
version = "0.6"

[package.metadata.system-deps.mutter_clutter_8.v0_8]
version = "0.8"

[package.metadata.system-deps.mutter_clutter_8.v1_0]
version = "1.0"

[package.metadata.system-deps.mutter_clutter_8.v1_2]
version = "1.2"

[package.metadata.system-deps.mutter_clutter_8.v1_4]
version = "1.4"

[package.metadata.system-deps.mutter_clutter_8.v1_6]
version = "1.6"

[package.metadata.system-deps.mutter_clutter_8.v1_8]
version = "1.8"

[package.metadata.system-deps.mutter_clutter_8.v1_10]
version = "1.10"

[package.metadata.system-deps.mutter_clutter_8.v1_12]
version = "1.12"

[package.metadata.system-deps.mutter_clutter_8.v1_14]
version = "1.14"

[package.metadata.system-deps.mutter_clutter_8.v1_16]
version = "1.16"

[package.metadata.system-deps.mutter_clutter_8.v1_18]
version = "1.18"

[package.metadata.system-deps.mutter_clutter_8.v1_20]
version = "1.20"

[package.metadata.system-deps.mutter_clutter_8.v1_22]
version = "1.22"

[package.metadata.system-deps.mutter_clutter_8.v1_24]
version = "1.24"

[package.metadata.system-deps.mutter_clutter_8.v1_26]
version = "1.26"

[package.metadata.system-deps.mutter_clutter_8.v1_28]
version = "1.28"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "clutter_sys"

[dependencies]
libc = "0.2"

[dependencies.atk-sys]
path = "../atk-sys"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.cogl-sys]
path = "../cogl-sys"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.graphene-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.json-sys]
path = "../json-sys"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v0_2 = []
v0_4 = ["v0_2"]
v0_6 = ["v0_4"]
v0_8 = ["v0_6"]
v1_0 = ["v0_8"]
v1_2 = ["v1_0"]
v1_4 = ["v1_2"]
v1_6 = ["v1_4"]
v1_8 = ["v1_6"]
v1_10 = ["v1_8"]
v1_12 = ["v1_10"]
v1_14 = ["v1_12"]
v1_16 = ["v1_14"]
v1_18 = ["v1_16"]
v1_20 = ["v1_18"]
v1_22 = ["v1_20"]
v1_24 = ["v1_22"]
v1_26 = ["v1_24"]
v1_28 = ["v1_26"]
dox = []
