[package]
name = "clutter"
version = "0.0.1"
edition = "2018"

[lib]
name = "clutter"

[dependencies]
bitflags = "1.3.2"
ffi = { package = "clutter-sys", path = "../clutter-sys" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
libc = "0.2.100"

[features]
default = ["v0_2"]
v0_2 = ["ffi/v0_2"]
v1_10 = ["ffi/v1_10"]
