[package]
name = "clutter"
version = "0.0.1"
edition = "2018"

[lib]
name = "clutter"

[dependencies]
bitflags = "1.3.2"
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core" }
cogl = { path = "../cogl" }
ffi = { package = "clutter-sys", path = "../clutter-sys" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
libc = "0.2.100"
pango = { git = "https://github.com/gtk-rs/gtk-rs-core" }

[features]
# Force all features on by default
default = ["v1_28"]
v0_2 = ["ffi/v0_2"]
v0_4 = ["ffi/v0_4", "v0_2"]
v0_6 = ["ffi/v0_6", "v0_4"]
v0_8 = ["ffi/v0_8", "v0_6"]
v1_0 = ["ffi/v1_0", "v0_8"]
v1_2 = ["ffi/v1_2", "v1_0"]
v1_4 = ["ffi/v1_4", "v1_2"]
v1_6 = ["ffi/v1_6", "v1_4"]
v1_8 = ["ffi/v1_8", "v1_6"]
v1_10 = ["ffi/v1_10", "v1_8"]
v1_12 = ["ffi/v1_12", "v1_10"]
v1_14 = ["ffi/v1_14", "v1_12"]
v1_16 = ["ffi/v1_16", "v1_14"]
v1_18 = ["ffi/v1_18", "v1_16"]
v1_20 = ["ffi/v1_20", "v1_18"]
v1_22 = ["ffi/v1_22", "v1_20"]
v1_24 = ["ffi/v1_24", "v1_22"]
v1_26 = ["ffi/v1_26", "v1_24"]
v1_28 = ["ffi/v1_28", "v1_26"]
