[package]
name = "cogl-sys"
version = "0.0.1"
links = "\"mutter-cogl-8\""
edition = "2018"
build = "build.rs"
[package.metadata.system-deps.mutter_cogl_8]
name = "mutter-cogl-8"
version = "0.0"

[package.metadata.system-deps.mutter_cogl_8.v0_8]
version = "0.8"

[package.metadata.system-deps.mutter_cogl_8.v0_10]
version = "0.10"

[package.metadata.system-deps.mutter_cogl_8.v1_0]
version = "1.0"

[package.metadata.system-deps.mutter_cogl_8.v1_2]
version = "1.2"

[package.metadata.system-deps.mutter_cogl_8.v1_4]
version = "1.4"

[package.metadata.system-deps.mutter_cogl_8.v1_6]
version = "1.6"

[package.metadata.system-deps.mutter_cogl_8.v1_8]
version = "1.8"

[package.metadata.system-deps.mutter_cogl_8.v1_10]
version = "1.10"

[package.metadata.system-deps.mutter_cogl_8.v1_14]
version = "1.14"

[package.metadata.system-deps.mutter_cogl_8.v1_16]
version = "1.16"

[package.metadata.system-deps.mutter_cogl_8.v1_18]
version = "1.18"

[package.metadata.system-deps.mutter_cogl_8.v1_20]
version = "1.20"

[package.metadata.system-deps.mutter_cogl_8.v2_0]
version = "2.0"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "cogl_sys"

[dependencies]
libc = "0.2"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.graphene-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v0_8 = []
v0_10 = ["v0_8"]
v1_0 = ["v0_10"]
v1_2 = ["v1_0"]
v1_4 = ["v1_2"]
v1_6 = ["v1_4"]
v1_8 = ["v1_6"]
v1_10 = ["v1_8"]
v1_14 = ["v1_10"]
v1_16 = ["v1_14"]
v1_18 = ["v1_16"]
v1_20 = ["v1_18"]
v2_0 = ["v1_20"]
dox = []
