[package]
name = "cogl"
version = "0.0.1"
edition = "2018"

[lib]
name = "cogl"

[dependencies]
bitflags = "1.3.2"
ffi = { package = "cogl-sys", path = "../cogl-sys" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
libc = "0.2.100"

[features]
# Force all features on by default
default = ["v2_0"]
v0_8 = ["ffi/v0_8"]
v0_10 = ["ffi/v0_10", "v0_8"]
v1_0 = ["ffi/v1_0", "v0_10"]
v1_2 = ["ffi/v1_2", "v1_0"]
v1_4 = ["ffi/v1_4", "v1_2"]
v1_6 = ["ffi/v1_6", "v1_4"]
v1_8 = ["ffi/v1_8", "v1_6"]
v1_10 = ["ffi/v1_10", "v1_8"]
v1_14 = ["ffi/v1_14", "v1_10"]
v1_16 = ["ffi/v1_16", "v1_14"]
v1_18 = ["ffi/v1_18", "v1_16"]
v1_20 = ["ffi/v1_20", "v1_18"]
v2_0 = ["ffi/v2_0", "v1_20"]
