[package]
name = "json-sys"
version = "0.0.1"
links = "\"json-glib-1.0\""
edition = "2018"
build = "build.rs"
[package.metadata.system-deps.json_glib_1_0]
name = "json-glib-1.0"
version = "0.0"

[package.metadata.system-deps.json_glib_1_0.v0_4]
version = "0.4"

[package.metadata.system-deps.json_glib_1_0.v0_6]
version = "0.6"

[package.metadata.system-deps.json_glib_1_0.v0_8]
version = "0.8"

[package.metadata.system-deps.json_glib_1_0.v0_10]
version = "0.10"

[package.metadata.system-deps.json_glib_1_0.v0_12]
version = "0.12"

[package.metadata.system-deps.json_glib_1_0.v0_14]
version = "0.14"

[package.metadata.system-deps.json_glib_1_0.v0_16]
version = "0.16"

[package.metadata.system-deps.json_glib_1_0.v1_2]
version = "1.2"

[package.metadata.system-deps.json_glib_1_0.v1_4]
version = "1.4"

[package.metadata.system-deps.json_glib_1_0.v1_6]
version = "1.6"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "json_sys"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v0_4 = []
v0_6 = ["v0_4"]
v0_8 = ["v0_6"]
v0_10 = ["v0_8"]
v0_12 = ["v0_10"]
v0_14 = ["v0_12"]
v0_16 = ["v0_14"]
v1_2 = ["v0_16"]
v1_4 = ["v1_2"]
v1_6 = ["v1_4"]
dox = []
