[package]
name = "meta"
version = "0.0.1"
edition = "2018"

[lib]
name = "meta"

[dependencies]
bitflags = "1.3.2"
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core" }
clutter = { path = "../clutter" }
ffi = { package = "meta-sys", path = "../meta-sys" }
gdesktop_enums = { path = "../gdesktop_enums" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
libc = "0.2.100"
pango = { git = "https://github.com/gtk-rs/gtk-rs-core" }
